--- a/Week 1 Introduction to Machine Learning/Optional Labs/C1_W1_Lab01_Python_Jupyter_Soln.ipynb
+++ b/Week 1 Introduction to Machine Learning/Optional Labs/C1_W1_Lab01_Python_Jupyter_Soln.ipynb
@@ -52,7 +52,7 @@
    },
    "source": [
     "<figure>\n",
-    "    <center> <img src=\"./images/C1W1L1_Tour.PNG\"  alt='missing' width=\"400\"  ><center/>\n",
+    "    <center> <img src=\"./Images/C1W1L1_Tour.PNG\"  alt='missing' width=\"400\"  ><center/>\n",
     "<figure/>"
    ]
   },
