--- a/Week 1 Introduction to Machine Learning/Optional Labs/C1_W1_Lab01_Python_Jupyter_Soln.ipynb
+++ b/Week 1 Introduction to Machine Learning/Optional Labs/C1_W1_Lab01_Python_Jupyter_Soln.ipynb
@@ -76,7 +76,7 @@
    },
    "source": [
     "<figure>\n",
-    "   <img src=\"./images/C1W1L1_Markdown.PNG\"  alt='missing' width=\"400\"  >\n",
+    "   <img src=\"./Images/C1W1L1_Markdown.png\"  alt='missing' width=\"400\"  >\n",
     "<figure/>"
    ]
   },
@@ -127,7 +127,7 @@
     "- hold the shift-key down and hit 'enter' or 'return'\n",
     "- click the 'run' arrow above\n",
     "<figure>\n",
-    "    <img src=\"./images/C1W1L1_Run.PNG\"  width=\"400\"  >\n",
+    "    <img src=\"./Images/C1W1L1_Run.png\"  width=\"400\"  >\n",
     "<figure/>\n",
     "\n",
     " "
