--- a/Week 1 Introduction to Machine Learning/Optional Labs/C1_W1_Lab04_Gradient_Descent_Soln.ipynb
+++ b/Week 1 Introduction to Machine Learning/Optional Labs/C1_W1_Lab04_Gradient_Descent_Soln.ipynb
@@ -7,7 +7,7 @@
     "# Optional Lab: Gradient Descent for Linear Regression\n",
     "\n",
     "<figure>\n",
-    "    <center> <img src=\"./images/C1_W1_L4_S1_Lecture_GD.png\"  style=\"width:800px;height:200px;\" ></center>\n",
+    "    <center> <img src=\"./Images/C1_W1_L4_S1_Lecture_GD.png\"  style=\"width:800px;height:200px;\" ></center>\n",
     "</figure>"
    ]
   },
@@ -492,7 +492,7 @@
     "### Increased Learning Rate\n",
     "\n",
     "<figure>\n",
-    " <img align=\"left\", src=\"./images/C1_W1_Lab03_alpha_too_big.PNG\"   style=\"width:340px;height:240px;\" >\n",
+    " <img align=\"left\", src=\"./Images/C1_W1_Lab03_alpha_too_big.png\"   style=\"width:340px;height:240px;\" >\n",
     "</figure>\n",
     "In the lecture, there was a discussion related to the proper value of the learning rate, $\\alpha$ in equation(3). The larger $\\alpha$ is, the faster gradient descent will converge to a solution. But, if it is too large, gradient descent will diverge. Above you have an example of a solution which converges nicely.\n",
     "\n",
