--- a/Week 1 Introduction to Machine Learning/Optional Labs/C1_W1_Lab04_Gradient_Descent_Soln.ipynb
+++ b/Week 1 Introduction to Machine Learning/Optional Labs/C1_W1_Lab04_Gradient_Descent_Soln.ipynb
@@ -206,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img align=\"left\" src=\"./images/C1_W1_Lab03_lecture_slopes.PNG\"   style=\"width:340px;\" > The lectures described how gradient descent utilizes the partial derivative of the cost with respect to a parameter at a point to update that parameter.   \n",
+    "<img align=\"left\" src=\"./Images/C1_W1_Lab03_lecture_slopes.png\"   style=\"width:340px;\" > The lectures described how gradient descent utilizes the partial derivative of the cost with respect to a parameter at a point to update that parameter.   \n",
     "Let's use our `compute_gradient` function to find and plot some partial derivatives of our cost function relative to one of the parameters, $w_0$.\n"
    ]
   },
@@ -344,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img align=\"left\" src=\"./images/C1_W1_Lab03_lecture_learningrate.PNG\"  style=\"width:340px; padding: 15px; \" > \n",
+    "<img align=\"left\" src=\"./Images/C1_W1_Lab03_lecture_learningrate.png\"  style=\"width:340px; padding: 15px; \" > \n",
     "Take a moment and note some characteristics of the gradient descent process printed above.  \n",
     "\n",
     "- The cost starts large and rapidly declines as described in the slide from the lecture.\n",
