--- a/C1 - Supervised Machine Learning Regression and Classification/Week 1 Introduction to Machine Learning/Optional Labs/C1_W1_Lab04_Gradient_Descent_Soln.ipynb
+++ b/C1 - Supervised Machine Learning Regression and Classification/Week 1 Introduction to Machine Learning/Optional Labs/C1_W1_Lab04_Gradient_Descent_Soln.ipynb
@@ -7,7 +7,7 @@
     "# Optional Lab: Gradient Descent for Linear Regression\n",
     "\n",
     "<figure>\n",
-    "    <center> <img src=\"./images/C1_W1_L4_S1_Lecture_GD.png\"  style=\"width:800px;height:200px;\" ></center>\n",
+    "    <center> <img src=\"./Images/C1_W1_L4_S1_Lecture_GD.png\"  style=\"width:800px;height:200px;\" ></center>\n",
     "</figure>"
    ]
   },
@@ -206,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img align=\"left\" src=\"./images/C1_W1_Lab03_lecture_slopes.PNG\"   style=\"width:340px;\" > The lectures described how gradient descent utilizes the partial derivative of the cost with respect to a parameter at a point to update that parameter.   \n",
+    "<img align=\"left\" src=\"./Images/C1_W1_Lab03_lecture_slopes.png\"   style=\"width:340px;\" > The lectures described how gradient descent utilizes the partial derivative of the cost with respect to a parameter at a point to update that parameter.   \n",
     "Let's use our `compute_gradient` function to find and plot some partial derivatives of our cost function relative to one of the parameters, $w_0$.\n"
    ]
   },
@@ -344,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img align=\"left\" src=\"./images/C1_W1_Lab03_lecture_learningrate.PNG\"  style=\"width:340px; padding: 15px; \" > \n",
+    "<img align=\"left\" src=\"./Images/C1_W1_Lab03_lecture_learningrate.png\"  style=\"width:340px; padding: 15px; \" > \n",
     "Take a moment and note some characteristics of the gradient descent process printed above.  \n",
     "\n",
     "- The cost starts large and rapidly declines as described in the slide from the lecture.\n",
@@ -492,7 +492,7 @@
     "### Increased Learning Rate\n",
     "\n",
     "<figure>\n",
-    " <img align=\"left\", src=\"./images/C1_W1_Lab03_alpha_too_big.PNG\"   style=\"width:340px;height:240px;\" >\n",
+    " <img align=\"left\", src=\"./Images/C1_W1_Lab03_alpha_too_big.png\"   style=\"width:340px;height:240px;\" >\n",
     "</figure>\n",
     "In the lecture, there was a discussion related to the proper value of the learning rate, $\\alpha$ in equation(3). The larger $\\alpha$ is, the faster gradient descent will converge to a solution. But, if it is too large, gradient descent will diverge. Above you have an example of a solution which converges nicely.\n",
     "\n",
