--- a/C1 - Supervised Machine Learning Regression and Classification/Week 2 Regression with Multiple Input Variables/Optional Labs/C1_W2_Lab04_FeatEng_PolyReg_Soln.ipynb
+++ b/C1 - Supervised Machine Learning Regression and Classification/Week 2 Regression with Multiple Input Variables/Optional Labs/C1_W2_Lab04_FeatEng_PolyReg_Soln.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Optional Lab: Feature Engineering and Polynomial Regression\n",
     "\n",
-    "![](./images/C1_W2_Lab07_FeatureEngLecture.PNG)\n"
+    "![](./Images/C1_W2_Lab07_FeatureEngLecture.png)\n"
    ]
   },
   {
