--- a/C3 - Unsupervised Learning Recommenders Reinforcement Learning/Week 1 Unsupervised Learning/Graded Lab/C3_W1_Anomaly_Detection.ipynb
+++ b/C3 - Unsupervised Learning Recommenders Reinforcement Learning/Week 1 Unsupervised Learning/Graded Lab/C3_W1_Anomaly_Detection.ipynb
@@ -210,7 +210,7 @@
     "- For this dataset, you can use a scatter plot to visualize the data (`X_train`), since it has only two properties to plot (throughput and latency)\n",
     "\n",
     "- Your plot should look similar to the one below\n",
-    "<img src=\"images/figure1.png\" width=\"500\" height=\"500\">"
+    "<img src=\"images/figure2_1.png\" width=\"500\" height=\"500\">"
    ]
   },
   {
@@ -434,7 +434,7 @@
     "Now that you have completed the code in `estimate_gaussian`, we will visualize the contours of the fitted Gaussian distribution. \n",
     "\n",
     "You should get a plot similar to the figure below. \n",
-    "<img src=\"images/figure2.png\" width=\"500\" height=\"500\">\n",
+    "<img src=\"images/figure2_2.png\" width=\"500\" height=\"500\">\n",
     "\n",
     "\n",
     "From your plot you can see that most of the examples are in the region with the highest probability, while the anomalous examples are in the regions with lower probabilities."
@@ -707,7 +707,7 @@
    "source": [
     "Now we will run your anomaly detection code and circle the anomalies in the plot (Figure 3 below).\n",
     "\n",
-    "<img src=\"images/figure3.png\" width=\"500\" height=\"500\">"
+    "<img src=\"images/figure2_3.png\" width=\"500\" height=\"500\">"
    ]
   },
   {
